--- a/mobile/src/i18n/locales/pl/createPlant.json
+++ b/mobile/src/i18n/locales/pl/createPlant.json
@@ -39,7 +39,12 @@
         "toxic": "Toksyczna?",
         "growth": "Wzrost",
         "light": "Światło",
-        "fertilizer": "Nawożenie"
+        "fertilizer": "Nawożenie",
+        "recognize": "Rozpoznaj roślinę",
+        "back": "Wstecz",
+        "close": "Zamknij",
+        "noResults": "Brak wyników rozpoznawania. Spróbuj zrobić wyraźniejsze zdjęcie.",
+        "failedRecognition": "Nie udało się rozpoznać rośliny."
       }
     }
   }
