Fixed translations in scan plant modal

--- a/mobile/src/i18n/locales/en/createPlant.json
+++ b/mobile/src/i18n/locales/en/createPlant.json
@@ -7,7 +7,25 @@
       "searchPlaceholder": "Search plant",
       "popularPlants": "Popular plants",
       "errorSearch": "Failed to load plant list.",
-      "errorPopular": "Failed to load popular plants"
+      "errorPopular": "Failed to load popular plants",
+      "scanInstructions": "Take a photo or choose one from your gallery. Please use a clear, good-quality image that shows the plant’s leaf shape well, centered and not blocked by other plants or objects.",
+      "noPhoto": "No photo selected",
+      "takePhoto": "Take a photo",
+      "fromGallery": "From gallery",
+      "recognize": "Recognize plant",
+      "close": "Close",
+      "selectPlant": "Select the detected plant",
+      "back": "Back",
+      "cameraRequired": "Permission required",
+      "cameraPermissionMessage": "Please grant camera and media permissions to take a photo.",
+      "libraryRequired": "Permission required",
+      "libraryPermissionMessage": "Please grant media permissions to pick a photo.",
+      "cameraError": "Camera error",
+      "libraryError": "Picker error",
+      "cameraFailure": "Failed to open camera.",
+      "libraryFailure": "Failed to open gallery.",
+      "recognitionFailure": "Failed to recognize the plant.",
+      "noResults": "No results returned. Try a clearer photo."
     },
     "step02": {
       "title": "Plant profile",
