--- a/mobile/src/i18n/locales/pl/createPlant.json
+++ b/mobile/src/i18n/locales/pl/createPlant.json
@@ -7,7 +7,25 @@
       "searchPlaceholder": "Szukaj rośliny",
       "popularPlants": "Popularne rośliny",
       "errorSearch": "Nie udało się załadować listy roślin.",
-      "errorPopular": "Nie udało się załadować popularnych roślin."
+      "errorPopular": "Nie udało się załadować popularnych roślin.",
+      "scanInstructions": "Zrób zdjęcie lub wybierz jedno z galerii. Użyj wyraźnego, dobrej jakości zdjęcia, które dobrze pokazuje kształt liści rośliny, wyśrodkowane i niezablokowane przez inne rośliny lub przedmioty.",
+      "noPhoto": "Brak zdjęcia",
+      "takePhoto": "Zrób zdjęcie",
+      "fromGallery": "Z galerii",
+      "recognize": "Rozpoznaj roślinę",
+      "close": "Zamknij",
+      "selectPlant": "Wybierz wykrytą roślinę",
+      "back": "Wstecz",
+      "cameraRequired": "Wymagana zgoda",
+      "cameraPermissionMessage": "Proszę przyznać uprawnienia do kamery i mediów, aby zrobić zdjęcie.",
+      "libraryRequired": "Wymagana zgoda",
+      "libraryPermissionMessage": "Proszę przyznać uprawnienia do mediów, aby wybrać zdjęcie.",
+      "cameraError": "Błąd kamery",
+      "libraryError": "Błąd wybierania",
+      "cameraFailure": "Nie udało się otworzyć kamery.",
+      "libraryFailure": "Nie udało się otworzyć galerii.",
+      "recognitionFailure": "Nie udało się rozpoznać rośliny.",
+      "noResults": "Brak wyników. Spróbuj zrobić wyraźniejsze zdjęcie."
     },
     "step02": {
       "title": "Profil rośliny",
