Added translations to Add location modal in step03

--- a/mobile/src/i18n/locales/en/createPlant.json
+++ b/mobile/src/i18n/locales/en/createPlant.json
@@ -83,7 +83,10 @@
         "other": "No other locations yet."
       },
       "locationExists": "Location with this name already exists.",
-      "errorCreatingLocation": "Could not create location."
+      "errorCreatingLocation": "Could not create location",
+      "locationName": "Location name",
+      "cancel": "Cancel",
+      "quickSuggestions": "Quick suggestions"
     }
   }
 }
