--- a/mobile/src/i18n/locales/pl/createPlant.json
+++ b/mobile/src/i18n/locales/pl/createPlant.json
@@ -83,7 +83,10 @@
         "other": "Brak innych lokalizacji."
       },
       "locationExists": "Lokalizacja o tej nazwie już istnieje.",
-      "errorCreatingLocation": "Nie udało się utworzyć lokalizacji."
+      "errorCreatingLocation": "Nie udało się utworzyć lokalizacji",
+      "locationName": "Nazwa lokalizacji",
+      "cancel": "Anuluj",
+      "quickSuggestions": "Szybkie sugestie"
     }
   }
 }
