--- a/mobile/src/i18n/locales/pl/createPlant.json
+++ b/mobile/src/i18n/locales/pl/createPlant.json
@@ -87,6 +87,16 @@
       "locationName": "Nazwa lokalizacji",
       "cancel": "Anuluj",
       "quickSuggestions": "Szybkie sugestie"
+    },
+    "step04": {
+      "title": "Nasłonecznienie",
+      "subtitle": "Nasłonecznienie pomaga nam dostosować harmonogramy podlewania i przypomnienia o pielęgnacji. Powiedz nam, ile światła dociera do tego miejsca oraz w którą stronę jest okno.",
+      "lightLevel": "Poziom światła",
+      "low": "Niskie",
+      "high": "Wysokie",
+      "windowDirection": "Kierunek okna",
+      "measureLightDirection": "Zmierz światło i kierunek",
+      "distanceFromWindow": "Odległość od okna"
     }
   }
 }
