--- a/mobile/src/i18n/locales/en/createPlant.json
+++ b/mobile/src/i18n/locales/en/createPlant.json
@@ -8,7 +8,7 @@
       "popularPlants": "Popular plants",
       "errorSearch": "Failed to load plant list.",
       "errorPopular": "Failed to load popular plants",
-      "scanInstructions": "Take a photo or choose one from your gallery. Please use a clear, good-quality image that shows the plant’s leaf shape well, centered and not blocked by other plants or objects.",
+      "scanInstructions": "Take a photo or choose one from your gallery. Please use a clear, good-quality image that shows the plant's leaf shape well, centered and not blocked by other plants or objects.",
       "noPhoto": "No photo selected",
       "takePhoto": "Take a photo",
       "fromGallery": "From gallery",
@@ -86,7 +86,39 @@
       "errorCreatingLocation": "Could not create location",
       "locationName": "Location name",
       "cancel": "Cancel",
-      "quickSuggestions": "Quick suggestions"
+      "quickSuggestions": "Quick suggestions",
+      "predefinedLocations": {
+        "indoor": {
+          "livingRoom": "Living room",
+          "kitchen": "Kitchen",
+          "diningRoom": "Dining room",
+          "bedroom": "Bedroom",
+          "bathroom": "Bathroom",
+          "hallway": "Hallway",
+          "office": "Office",
+          "kidsRoom": "Kids room"
+        },
+        "outdoor": {
+          "balcony": "Balcony",
+          "terrace": "Terrace",
+          "patio": "Patio",
+          "garden": "Garden",
+          "frontYard": "Front yard",
+          "backyard": "Backyard",
+          "porch": "Porch",
+          "greenhouse": "Greenhouse"
+        },
+        "other": {
+          "staircase": "Staircase",
+          "garage": "Garage",
+          "basement": "Basement",
+          "lobby": "Lobby",
+          "sunroom": "Sunroom",
+          "workshop": "Workshop",
+          "studio": "Studio",
+          "attic": "Attic"
+        }
+      }
     },
     "step04": {
       "title": "Exposure",
@@ -96,7 +128,13 @@
       "high": "High",
       "windowDirection": "Window direction",
       "measureLightDirection": "Measure light & direction",
-      "distanceFromWindow": "Distance from window"
+      "distanceFromWindow": "Distance from window",
+      "orientations": {
+        "S": "South",
+        "E": "East",
+        "W": "West",
+        "N": "North"
+      }
     }
   }
 }
