--- a/mobile/src/i18n/locales/pl/createPlant.json
+++ b/mobile/src/i18n/locales/pl/createPlant.json
@@ -86,7 +86,39 @@
       "errorCreatingLocation": "Nie udało się utworzyć lokalizacji",
       "locationName": "Nazwa lokalizacji",
       "cancel": "Anuluj",
-      "quickSuggestions": "Szybkie sugestie"
+      "quickSuggestions": "Szybkie sugestie",
+      "predefinedLocations": {
+        "indoor": {
+          "livingRoom": "Salon",
+          "kitchen": "Kuchnia",
+          "diningRoom": "Jadalnia",
+          "bedroom": "Sypialnia",
+          "bathroom": "Łazienka",
+          "hallway": "Korytarz",
+          "office": "Biuro",
+          "kidsRoom": "Pokój dziecięcy"
+        },
+        "outdoor": {
+          "balcony": "Balkon",
+          "terrace": "Taras",
+          "patio": "Patio",
+          "garden": "Ogród",
+          "frontYard": "Przedni ogród",
+          "backyard": "Tylni ogród",
+          "porch": "Weranda",
+          "greenhouse": "Szklarnia"
+        },
+        "other": {
+          "staircase": "Schody",
+          "garage": "Garaż",
+          "basement": "Piwnica",
+          "lobby": "Hol",
+          "sunroom": "Weranda",
+          "workshop": "Warsztat",
+          "studio": "Studio",
+          "attic": "Poddasze"
+        }
+      }
     },
     "step04": {
       "title": "Nasłonecznienie",
@@ -96,7 +128,13 @@
       "high": "Wysokie",
       "windowDirection": "Kierunek okna",
       "measureLightDirection": "Zmierz światło i kierunek",
-      "distanceFromWindow": "Odległość od okna"
+      "distanceFromWindow": "Odległość od okna",
+      "orientations": {
+        "S": "Płd",
+        "E": "Wsch",
+        "W": "Zach",
+        "N": "Płn"
+      }
     }
   }
 }
