Final fix to step01 and 02 translations

--- a/mobile/src/i18n/locales/en/createPlantStep01.json
+++ b/mobile/src/i18n/locales/en/createPlantStep01.json
@@ -27,7 +27,9 @@
       "cameraFailure": "Failed to open camera.",
       "libraryFailure": "Failed to open gallery.",
       "recognitionFailure": "Failed to recognize the plant.",
-      "noResults": "No results returned. Try a clearer photo."
+      "noResults": "No results returned. Try a clearer photo.",
+      "back": "Back",
+      "close": "Close"
     }
   }
 }
