--- a/mobile/src/i18n/locales/pl/createPlantStep01.json
+++ b/mobile/src/i18n/locales/pl/createPlantStep01.json
@@ -27,7 +27,9 @@
       "cameraFailure": "Nie udało się otworzyć kamery.",
       "libraryFailure": "Nie udało się otworzyć galerii.",
       "recognitionFailure": "Nie udało się rozpoznać rośliny.",
-      "noResults": "Brak wyników. Spróbuj zrobić wyraźniejsze zdjęcie."
+      "noResults": "Brak wyników. Spróbuj zrobić wyraźniejsze zdjęcie.",
+      "back": "Wstecz",
+      "close": "Zamknij"
     }
   }
 }
