--- a/mobile/src/i18n/locales/pl/createPlantStep03.json
+++ b/mobile/src/i18n/locales/pl/createPlantStep03.json
@@ -1,6 +1,7 @@
 {
   "createPlant": {
     "step03": {
+      "loading": "Ładowanie...",
       "title": "Wybierz lokalizację",
       "subtitle": "Opcjonalnie, ale pomocne: lokalizacje pozwalają na grupowanie roślin i późniejsze sortowanie lub filtrowanie.",
       "errorLoadingLocations": "Nie udało się załadować lokalizacji.",
