Added fix to plan creation wizard

--- a/mobile/src/i18n/locales/en/createPlantStep08.json
+++ b/mobile/src/i18n/locales/en/createPlantStep08.json
@@ -15,7 +15,8 @@
       "cancel": "Cancel",
       "set": "Set",
       "invalidDateTitle": "Invalid date",
-      "invalidDateMessage": "Please enter a valid date in the format YYYY-MM-DD."
+      "invalidDateMessage": "Please enter a valid date in the format YYYY-MM-DD.",
+      "nameRequired": "Plant name is required to create a plant."
     }
   }
 }
