--- a/mobile/src/i18n/locales/pl/createPlantStep08.json
+++ b/mobile/src/i18n/locales/pl/createPlantStep08.json
@@ -15,7 +15,8 @@
       "cancel": "Anuluj",
       "set": "Ustaw",
       "invalidDateTitle": "Nieprawidłowa data",
-      "invalidDateMessage": "Wpisz poprawną datę w formacie RRRR-MM-DD."
+      "invalidDateMessage": "Wpisz poprawną datę w formacie RRRR-MM-DD.",
+      "nameRequired": "Aby utworzyć roślinę, musisz podać jej nazwę."
     }
   }
 }
