--- a/mobile/src/i18n/locales/en/taskHistoryModals.json
+++ b/mobile/src/i18n/locales/en/taskHistoryModals.json
@@ -6,7 +6,14 @@
       "delete": "Delete",
       "selectPlant": "Select plant",
       "selectLocation": "Select location",
-      "datePlaceholder": "YYYY-MM-DD"
+      "datePlaceholder": "YYYY-MM-DD",
+      "taskTypes": {
+        "watering": "Watering",
+        "moisture": "Moisture",
+        "fertilising": "Fertilising",
+        "care": "Care",
+        "repot": "Repot"
+      }
     },
     "delete": {
       "title": "Delete history",
