Added FAB button to change language for unlogged user, modifications to language and settings provider, other fixes to translations handling

--- a/mobile/src/i18n/locales/en/navigation.json
+++ b/mobile/src/i18n/locales/en/navigation.json
@@ -1,9 +1,11 @@
 {
-  "tabs": {
-    "Home": "Główna",
-    "Plants": "Rośliny",
-    "Reminders": "Przypomnienia",
-    "Readings": "Odczyty",
-    "Profile": "Profil"
+  "navigation": {
+    "tabs": {
+      "Home": "Home",
+      "Plants": "Plants",
+      "Reminders": "Reminders",
+      "Readings": "Readings",
+      "Profile": "Profile"
+    }
   }
 }
