--- a/mobile/src/i18n/locales/pl/forgotPassword.json
+++ b/mobile/src/i18n/locales/pl/forgotPassword.json
@@ -1,6 +1,6 @@
 {
   "forgotPassword": {
-    "title": "Zapomniałeś hasła",
+    "title": "Odzyskiwanie hasła",
     "subtitle": "Wprowadź swój adres email, a wyślemy Ci link do resetowania hasła.",
     "email": "Email",
     "sendButton": "Wyślij link resetujący",
