--- a/mobile/src/i18n/locales/pl/home.json
+++ b/mobile/src/i18n/locales/pl/home.json
@@ -1,7 +1,7 @@
 {
   "home": {
     "header": {
-      "title": "Strona główna"
+      "title": "Start"
     },
     "fab": {
       "showOverdue": "Pokaż zaległe",
