--- a/mobile/src/i18n/locales/pl/login.json
+++ b/mobile/src/i18n/locales/pl/login.json
@@ -3,7 +3,7 @@
     "title": "Logowanie",
     "email": "Email",
     "password": "Hasło",
-    "signIn": "Zaloguj się",
+    "signIn": "Zaloguj",
     "forgotPassword": "Zapomniałeś hasła?",
     "resendActivation": "Nie otrzymałeś e-maila aktywacyjnego?",
     "noAccount": "Nie masz konta?",
