--- a/mobile/src/i18n/locales/pl/register.json
+++ b/mobile/src/i18n/locales/pl/register.json
@@ -6,7 +6,7 @@
     "confirmPassword": "Potwierdź hasło",
     "termsAgreement": "Akceptuję",
     "termsLink": "Regulamin",
-    "signUpButton": "Zarejestruj się",
+    "signUpButton": "Zarejestruj",
     "haveAccount": "Masz już konto?",
     "loginLink": "Zaloguj się",
     "errors": {
