--- a/mobile/src/i18n/locales/pl/resendActivation.json
+++ b/mobile/src/i18n/locales/pl/resendActivation.json
@@ -3,7 +3,7 @@
     "title": "Wyślij ponownie aktywację",
     "subtitle": "Wprowadź swój adres email, a wyślemy nowy link aktywacyjny.",
     "email": "Email",
-    "sendButton": "Wyślij email aktywacyjny",
+    "sendButton": "Ponowna aktywacja",
     "backToLogin": "Powrót do logowania",
     "errors": {
       "emailRequired": "Proszę wprowadzić adres email.",
