Modified Reminders edit modal to extract user settings via Settings Provider

--- a/mobile/src/i18n/locales/pl/reminders.json
+++ b/mobile/src/i18n/locales/pl/reminders.json
@@ -13,11 +13,11 @@
     },
 
     "types": {
-      "watering": "PODLEWANIE",
-      "moisture": "ZRASZANIE",
-      "fertilising": "NAWOŻENIE",
-      "care": "PIELĘGNACJA",
-      "repot": "PRZESADZANIE"
+      "watering": "Podlewanie",
+      "moisture": "Zraszanie",
+      "fertilising": "Nawożenie",
+      "care": "Pielęgnacja",
+      "repot": "Przesadzanie"
     },
 
     "fab": {
