Adjusted notes in Complete Task modal to inform the user about Plant Journal

--- a/mobile/src/i18n/locales/en/homeModals.json
+++ b/mobile/src/i18n/locales/en/homeModals.json
@@ -8,6 +8,7 @@
     "complete": {
       "title": "Mark task as complete",
       "noteLabel": "Note (optional)",
+      "noteHint": "This note will be saved and can be viewed later per plant in Plants Journal.",
       "notePlaceholder": "You can add a short note about what you did, observations, etc.",
       "confirm": "Mark as complete"
     },
