--- a/mobile/src/i18n/locales/pl/homeModals.json
+++ b/mobile/src/i18n/locales/pl/homeModals.json
@@ -8,6 +8,7 @@
     "complete": {
       "title": "Oznacz zadanie jako wykonane",
       "noteLabel": "Notatka (opcjonalnie)",
+      "noteHint": "Ta notatka zostanie zapisana i będzie widoczna później dla danej rośliny w Dzienniku roślin.",
       "notePlaceholder": "Możesz dodać krótką notatkę o tym co zrobiłeś/aś, obserwacje itp.",
       "confirm": "Oznacz jako wykonane"
     },
