Added dummy Plants Journal modal

--- a/mobile/src/i18n/locales/en/plants.json
+++ b/mobile/src/i18n/locales/en/plants.json
@@ -21,6 +21,7 @@
     "menu": {
       "edit": "Edit plant",
       "reminders": "Show reminders",
+      "journal": "Show Plant Journal",
       "showQr": "Show QR code",
       "delete": "Delete plant"
     },
