--- a/mobile/src/i18n/locales/pl/plants.json
+++ b/mobile/src/i18n/locales/pl/plants.json
@@ -21,6 +21,7 @@
     "menu": {
       "edit": "Edytuj roślinę",
       "reminders": "Pokaż przypomnienia",
+      "journal": "Pokaż dziennik rośliny",
       "showQr": "Pokaż kod QR",
       "delete": "Usuń roślinę"
     },
