--- a/mobile/src/i18n/locales/en/home.json
+++ b/mobile/src/i18n/locales/en/home.json
@@ -21,7 +21,7 @@
     },
     "taskTypes": {
       "watering": "WATERING",
-      "moisture": "MOISTURE",
+      "moisture": "MISTING",
       "fertilising": "FERTILISING",
       "care": "CARE",
       "repot": "REPOT"
