--- a/mobile/src/i18n/locales/pl/reminders.json
+++ b/mobile/src/i18n/locales/pl/reminders.json
@@ -31,7 +31,7 @@
 
     "empty": {
       "title": "Brak przypomnień",
-      "description": "Przypomnienia są powiązane z konkretnymi roślinami. Upewnij się, że masz utworzoną przynajmniej jedną roślinę.\n\nDotknij przycisku „+”, aby dodać przypomnienie. W oknie wybierzesz roślinę, typ (podlewanie, wilgotność, nawożenie, pielęgnacja lub przesadzanie), ustawisz pierwszą datę oraz częstotliwość powtarzania."
+      "description": "Przypomnienia są powiązane z konkretnymi roślinami. Upewnij się, że masz utworzoną przynajmniej jedną roślinę.\n\nDotknij przycisku „+”, aby dodać przypomnienie. W oknie wybierzesz roślinę, typ (podlewanie, zraszanie, nawożenie, pielęgnacja lub przesadzanie), ustawisz pierwszą datę oraz częstotliwość powtarzania."
     },
 
     "menu": {
